--- a/NewApp/app/src/main/res/layout/activity_display_message.xml
+++ b/NewApp/app/src/main/res/layout/activity_display_message.xml
@@ -21,4 +21,41 @@
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1" />
 
+    <ImageView
+        android:id="@+id/map"
+        android:layout_width="0dp"
+        android:layout_height="292dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@drawable/maps"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp" />
+
+    <ImageView
+        android:id="@+id/star"
+        android:layout_width="42dp"
+        android:layout_height="44dp"
+        app:srcCompat="@android:drawable/star_big_off"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="@+id/map"
+        android:layout_marginEnd="114dp"
+        app:layout_constraintRight_toRightOf="@+id/map"
+        android:layout_marginTop="171dp"
+        android:layout_marginBottom="171dp"
+        app:layout_constraintTop_toTopOf="@+id/subTitle"
+        android:layout_marginRight="120dp"
+        app:layout_constraintVertical_bias="1.0" />
+
+
 </android.support.constraint.ConstraintLayout>
