--- a/NewApp/app/src/main/res/layout/activity_main.xml
+++ b/NewApp/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.example.anew.newapp.MainActivity">
 
-
-
     <EditText
         android:id="@+id/username"
         android:layout_width="wrap_content"
@@ -41,15 +39,10 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="17dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="0dp"
         android:onClick="sendMessage"
         android:text="LOG IN"
-        app:layout_constraintLeft_toLeftOf="@+id/checkBox"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_editor_absoluteY="357dp"
+        tools:layout_editor_absoluteX="148dp" />
 
     <TextView
         android:id="@+id/title"
@@ -66,19 +59,6 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintLeft_toLeftOf="parent" />
 
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Remember me"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="28dp"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.501" />
 
     <ImageView
         android:id="@+id/imageView"
